# nrf7002

./: README.md
nrf7002_edge_impulse_test/SPI_sample/: CMakeLists.txt  Makefile  nordic_top.suit  pm.yml  prj.conf
nrf7002_edge_impulse_test/SPI_sample/.cache/clangd/index/: Accelero_instance.c.B62DCA875C36C558.idx  Accelero_instance.h.8FF2121D4426C94D.idx  LIS302DL.c.3567BD92DC54A7FE.idx  LIS302DL.h.16121CFF984F33D8.idx  _kiss_fft_guts.h.60A33AD4131159F8.idx  activation_utils.h.3FFFC8C748491A7A.idx  activations.cc.645ADA16B7D54228.idx  activations.h.3CDD365B355F3557.idx  activations_common.cc.6623FB58386CDEDA.idx  add.cc.02B867C059FBF544.idx  add.h.15029D91A61CEF97.idx  add.h.19520C09986292D9.idx  add.h.476D5257FBEF0603.idx  add_common.cc.8DC7AAE1AB3D8123.idx  add_n.cc.8D46170358ACE262.idx  add_n.h.5BEC2563C671B3B0.idx  all_ops_resolver.cc.849B75EA40BC6895.idx  all_ops_resolver.h.9B9F3341FD69A1AF.idx  arg_min_max.cc.D98B91782A52A2DA.idx  arg_min_max.h.D8CD2DC6406FA947.idx  arm_abs_f16.c.85B775B94D1392FB.idx  arm_abs_f32.c.A372EE527A135D20.idx  arm_abs_f64.c.735D122DFA6FDB07.idx  arm_abs_q15.c.C31B07A860A3F12C.idx  arm_abs_q31.c.BE94D89158969F9D.idx  arm_abs_q7.c.B1E526F0AC9C185B.idx  arm_absmax_f16.c.EBFF6C7B461290B4.idx  arm_absmax_f32.c.85EF435CF959C3F6.idx  arm_absmax_f64.c.9F43F5BFC38FB418.idx  arm_absmax_no_idx_f16.c.1F2035B983D2A41C.idx  arm_absmax_no_idx_f32.c.CC2610AC55D25E4D.idx  arm_absmax_no_idx_f64.c.A018BCD747C48576.idx  arm_absmax_no_idx_q15.c.7842D06368904AF5.idx  arm_absmax_no_idx_q31.c.A8B25F25377F8510.idx  arm_absmax_no_idx_q7.c.6022E8CC62BC671D.idx  arm_absmax_q15.c.AE5AF5F3AB1143F7.idx  arm_absmax_q31.c.1A63687C1F0AF6D2.idx  arm_absmax_q7.c.E8CF6EB77C13FD4F.idx  arm_absmin_f16.c.D52EA77D937B5464.idx  arm_absmin_f32.c.835D7E376540A908.idx  (+919 more)
nrf7002_edge_impulse_test/SPI_sample/LIS302DL_driver/inc/: Accelero_instance.h  Bit_operation.h  LIS302DL.h
nrf7002_edge_impulse_test/SPI_sample/LIS302DL_driver/src/: .Accelero_instance.c.swo  .Accelero_instance.c.swp  Accelero_instance.c  LIS302DL.c
nrf7002_edge_impulse_test/SPI_sample/boards/: nrf54h20dk_nrf54h20_cpuapp.overlay  nrf54h20dk_nrf54h20_cpuapp_fast.overlay  nrf54h20pdk_nrf54h20_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.overlay
nrf7002_edge_impulse_test/SPI_sample/lib/: CMakeLists.txt  README.txt
nrf7002_edge_impulse_test/SPI_sample/lib/model-parameters/: model_metadata.h  model_variables.h
nrf7002_edge_impulse_test/SPI_sample/lib/tflite-model/: tflite_learn_6_compiled.cpp  tflite_learn_6_compiled.h
nrf7002_edge_impulse_test/SPI_sample/model-parameters/: model_metadata.h  model_variables.h
nrf7002_edge_impulse_test/SPI_sample/src/: main.c  main.cpp  main.cpp.3.bak  main.cpp.bak
nrf7002_edge_impulse_test/SPI_sample/tflite-model/: tflite_learn_6_compiled.cpp  tflite_learn_6_compiled.h
(+13 files in other folders)
